--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-<<<<<<< Updated upstream
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2"
-=======
-    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
     "rsuite": "^5.34.1",
     "swiper": "^9.3.2"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
